--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -9,8 +9,7 @@
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header>
-    </header>
+    <header></header>
     <main>
         <section>
             <header>
@@ -30,57 +29,59 @@
             <h2>Heading with a subtitle</h2>
             <p>This is my subtitle</p>
             <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-            <!-- Lists -->
-            <section>
-                <header>
-                    <h2>Lists</h2>
-                </header>
-                    <div>
-                        <h3>Unordered</h3>
-                        <ul>
-                            <li>Dolor pulvinar etiam magna etiam.</li>
-                            <li>Sagittis adipiscing lorem eleifend.</li>
-                            <li>Felis enim feugiat dolore viverra.</li>
-                        </ul>
-                        <h3>Ordered</h3>
-                        <ol>
-                            <li>Dolor pulvinar etiam magna etiam.</li>
-                            <li>Sagittis adipiscing lorem eleifend.</li>
-                            <li>Felis enim feugiat dolore viverra.</li>
-                        </ol>
-                        <h3>Definition</h3>
-                        <dl>
-                            <dt>Definition List title</dt>
-                            <dd>Definition text.</dd>
-                            <dt>Startup</dt>
-                            <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
-                            <dt>Water</dt>
-                            <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
-                          </dl>
-                    </div>
-            </section>
         </section>
-        <!-- Horizontal rule -->
-        <section>
+         <!-- Lists -->
+         <section>
             <header>
-                <h2>Horizontal rule</h2>
+                <h2>Lists</h2>
             </header>
             <div>
-                <hr>
+                <h3>Unordered</h3>
+                <ul>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ul>
+                <h3>Ordered</h3>
+                <ol>
+                    <li>Dolor pulvinar etiam magna etiam.</li>
+                    <li>Sagittis adipiscing lorem eleifend.</li>
+                    <li>Felis enim feugiat dolore viverra.</li>
+                </ol>
+                <h3>Definition</h3>
+                <dl>
+                    <dt>Definition List title</dt>
+                    <dd>Definition text.</dd>
+                    <dt>Startup</dt>
+                    <dd>A startup company or startup is a company or temporary organization designed to search for a repeatable and scalable business model.</dd>
+                    <dt>Water</dt>
+                    <dd>A colorless, transparent, odorless liquid that forms the seas, lakes, rivers, and rain and is the basis of the fluids of living organisms.</dd>
+                </dl>
             </div>
-        </section>
-        <!-- Blockquotes -->
-        <section>
+         </section>
+         <!-- Horizontal rule -->
+         <section>
+             <header>
+                 <h2>Horizontal rule</h2>
+                </header>
+             <div>
+                 <hr>
+            </div>
+         </section>
+         <!-- Blockquotes -->
+         <section>
             <header>
                 <h2>Blockquotes</h2>
             </header>
             <div>
                 <h3>Inline quote</h3>
-                <q>Stay hungry, Stay foolish</q>
+                <q>Stay hungry. Stay foolish.</q>
             </div>
             <div>
                 <h3>Blockquote</h3>
-                <blockquote>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</blockquote><cite>Kaney West, Musician</cite>
+                <blockquote>
+                    <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.  <cite>Kanye West, Musician</cite></p>
+                </blockquote>
             </div>
         </section>
         <!-- Typography -->
@@ -89,45 +90,47 @@
                 <h2>Typography</h2>
             </header>
             <div>
-                <p>320 Stewart Avenue,<br>Unit 12 (line break)<br>New York City NY 10001</p>
+                <address>
+                    320 Stewart Avenue, Unit 12 <br> New York City NY 10001
+                </address>
             </div>
             <div>
                 <pre>
-                    <code>
-                        <h2>My title</h2>
-                        <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
-                    </code>
+                  <code>
+                    <h2>My title</h2>
+                    <p>Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero. Aenean hendrerit ultrices nulla ac lobortis. Vestibulum consectetur nibh vel ante rhoncus faucibus.</p>
+                  </code>
                 </pre>
-            </div>
-            <div>
-                <p>Curabitur sit amet turpis cursus massa mollis <b>highlighted</b>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <b>highlighted</b> mi consequat ut. Cras nec quam sed sapien ultricies <b>highlighted</b> ut sed metus.</p>
-            </div>
+              </div>
+              <div>
+                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
+              </div>
         </section>
         <!-- Table -->
         <section>
-            <header>
-                <h2>Table</h2>
-            </header>
+            <header><h2>Table</h2></header>
             <table>
                 <caption>Star Wars Trilogy Data</caption>
-                <tbody>
+                <thead>
                     <tr>
                         <th scope="col">Title</th>
-                        <th>Director</th>
-                        <th>Release Date</th>
+                        <th scope="col">Director</th>
+                        <th scope="col">Release Date</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <th scope="row">Star Wars: Episode IV - A New Hope</th>
                         <td>George Lucas</td>
                         <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <th>Star Wars: Episode V - The Empire Strikes Back</th>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
                         <td>Irvin Kershner</td>
                         <td>May 21st, 1980</td>
                     </tr>
                     <tr>
-                        <th>Star Wars: Episode VI - Return of the Jedi</th>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
                         <td>Richard Marquand</td>
                         <td>May 25th, 1983</td>
                     </tr>
@@ -135,7 +138,6 @@
             </table>
         </section>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
 </html>
