--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -13,7 +14,7 @@
     <header>
         <div>
             <div>
-                <a href="/"><img src="./logo-black.png" alt="Techium logo" width="160" height="40"></a>
+                <a href="/"><img src="logo-black.png" width="160" height="40" alt="Techium logo"></a>
             </div>
             <nav>
                 <ul>
@@ -21,7 +22,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#works">Works</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#latst_news">Latest news</a></li>
+                    <li><a href="#latest_news">Latest news</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -31,14 +32,14 @@
     <!-- Main -->
     <main>
         <h1>Homepage</h1>
-        <!-- Hero section-->
+        <!-- Hero section -->
         <section>
             <div>
                 <h2>We help you build your brand!</h2>
                 <a href="#">Get started</a>
             </div>
         </section>
-        <!-- Services section-->
+        <!-- Services section -->
         <section>
             <div>
                 <header>
@@ -55,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <!-- Works Sections -->
+        <!-- Works section -->
         <section>
             <div>
                 <header>
@@ -63,30 +64,9 @@
                     <p>Take a look in our portfolio</p>
                 </header>
                 <div>
-                    <article>
-                        <div>
-                            <img src="./images/pic-work-01.jpg" alt="">
-                        </div>
-                        <h3>
-                            <a href="#">Interior Design</a>
-                        </h3>
-                    </article>
-                    <article>
-                        <div>
-                            <img src="./images/pic-work-02.jpg" alt="">
-                        </div>
-                        <h3>
-                        <a href="#">Web Development</a>
-                    </h3>
-                    </article>
-                    <article>
-                        <div>
-                            <img src="./images/pic-work-03.jpg" alt="">
-                        </div>
-                        <h3>
-                        <a href="#">Personal Brand</a>
-                    </h3>
-                    </article>
+                    <article><div><img src="images/pic-work-01.jpg" alt=""></div><h3><a href="#">Interior Design</a></h3></article>
+                    <article><div><img src="images/pic-work-02.jpg" alt=""></div><h3><a href="#">Web Development</a></h3></article>
+                    <article><div><img src="images/pic-work-03.jpg" alt=""></div><h3><a href="#">Personal Brand</a></h3></article>
                 </div>
             </div>
         </section>
@@ -94,12 +74,11 @@
         <section>
             <div>
                 <header>
-                    <h2>About us</h2>
+                    <h2>About Us</h2>
                     <p>Everything about us</p>
-                    <a href="about.html">Learn more about us</a>
                 </header>
                 <div>
-                    <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
+                    <img src="images/pic-about-us.jpg" width="460" height="447" alt="">
                     <h3>Who are we</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     <h3>Our culture</h3>
@@ -107,9 +86,10 @@
                     <h3>How we work</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                 </div>
+                <a href="about.html">Learn more about us</a>
             </div>
         </section>
-        <!-- Last news section -->
+        <!-- Latest news section -->
         <section>
             <div>
                 <header>
@@ -117,19 +97,25 @@
                 </header>
                 <div>
                     <article>
-                        <img src="./images/pic-blog-01.jpg" width="305" height="205">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3><small>By Kelly D.</small>
+                        <div>
+                            <img src="images/pic-blog-01.jpg" alt="" width="305" height="205">
+                        </div>
+                        <p>Career</p>
+                        <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p><small>By Kelly D.</small>
                     </article>
                     <article>
-                        <img src="./images/pic-blog-02.jpg" width="305" height="205">
+                        <div>
+                            <img src="images/pic-blog-02.jpg" alt="" width="305" height="205">
+                        </div>
                         <p>Digital Life</p>
                         <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
-                        <small>By William A.</small>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p><small>By William A.</small>
                     </article>
                     <article>
-                        <img src="./images/pic-blog-03.jpg" width="305" height="205">
+                        <div>
+                            <img src="images/pic-blog-03.jpg" alt="" width="305" height="205">
+                        </div>
                         <p>Social</p>
                         <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p><small>By Frances J.</small>
@@ -146,40 +132,46 @@
                 </header>
                 <div>
                     <article>
-                        <img alt="Yuri Y. avatar" src="./images/pic-person-01.jpg" width="100px" height="100px">
+                        <img src="./images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
                         <blockquote>
-                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!<cite>Yuri Y.</cite></p>
+                            <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website! <cite>Yuri Y.</cite></p>
                         </blockquote>
                     </article>
                     <article>
-                        <img alt="Dorrie S. avatar" src="./images/pic-person-02.jpg" width="100px" height="100px">
+                        <img src="./images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
                         <blockquote>
-                            <p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.</cite></p>
+                            <p>Thank you so much for your help. Techium company is awesome! <cite>Dorrie S.</cite></p>
                         </blockquote>
                     </article>
                     <article>
-                        <img alt="Sven H. avatar" src="./images/pic-person-03.jpg" width="100px" height="100px">
+                        <img src="./images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
                         <blockquote>
-                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.<cite>Sven H.</cite></p>
+                            <p>I love your system. Definitely worth the investment. I'd be lost without Techium company. <cite>Sven H.</cite></p>
                         </blockquote>
                     </article>
                 </div>
             </div>
         </section>
-        <!-- Contact Section- -->
+        <!-- Contact section -->
         <section>
             <div>
-                <h2>Contact</h2>
-                <p>We like to know new people</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                <header>
+                    <h2>Contact</h2>
+                    <p>We like to know new people</p>
+                </header>
+                <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                </div>
                 <a href="contact.html">Get in touch</a>
             </div>
         </section>
     </main>
     <!-- Footer -->
     <footer>
-        <img src="./logo-black.png" alt="Techium logo" width="160px" height="40px">
-        <p>address:234 Washington Street (line-break) Urbana, Illinois</p>
+        <img src="./logo-black.png" width="160" height="40" alt="Techium logo">
+        <address>
+            234 Washington Street <br> Urbana, Illinois
+          </address>
         <div>
             <ul>
                 <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
@@ -192,8 +184,8 @@
         <div>
             <ul>
                 <li><a href="#">Terms of Use</a></li>
-                <li><a href="#"></a>Privacy Policy</li>
-                <li><a href="#"></a>Cookie Policy</li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
             </ul>
         </div>
     </footer>
