--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='./styles/1-styles.css'>
+    <link rel='stylesheet' href='./styles/11-style.css'>
   </head>
   <body>
-    <!– Header –>
+    <!ï¿½ Header ï¿½>
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-logo">
@@ -45,10 +45,10 @@
         </nav>
       </div>
     </header>
-    <!– Main –>
+    <!ï¿½ Main ï¿½>
     <main>
       <h1 class="visually-hidden">Homepage</h1>
-      <!– Hero section –>
+      <!ï¿½ Hero section ï¿½>
       <section class="section-hero" data-section-theme="dark">
         <div class="container">
           <div class="section-body">
@@ -59,7 +59,7 @@
           </div>
         </div>
       </section>
-      <!– Services section –>
+      <!ï¿½ Services section ï¿½>
       <section id="services" class="section">
         <div class="container">
           <header class="section-header">
@@ -104,7 +104,7 @@
           </div>
         </div>
       </section>
-      <!– Works section –>
+      <!ï¿½ Works section ï¿½>
       <section id="works" class="section" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -153,7 +153,7 @@
           </div>
         </div>
       </section>
-      <!– About Us section –>
+      <!ï¿½ About Us section ï¿½>
       <section id="about" class="section">
         <div class="container">
           <header class="section-header">
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-      <!– Latest news section –>
+      <!ï¿½ Latest news section ï¿½>
       <section id="latest_news" class="section">
         <div class="container">
           <header class="section-header">
@@ -225,7 +225,7 @@
           </div>
         </div>
       </section>
-      <!– Testimonials section –>
+      <!ï¿½ Testimonials section ï¿½>
       <section id="testimonials" class="section">
         <div class="container">
           <header class="section-header">
@@ -238,7 +238,7 @@
                 <article class="card-testimonial">
                   <img src="images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
-                    <p>I am completely blown away. Thanks to Techium, we’ve just launched our 5th website!
+                    <p>I am completely blown away. Thanks to Techium, weï¿½ve just launched our 5th website!
                       <cite>Yuri Y.</cite>
                     </p>
                   </blockquote>
@@ -258,7 +258,7 @@
                 <article class="card-testimonial">
                   <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100" class="card-avatar">
                   <blockquote class="card-quote">
-                    <p>I love your system. Definitely worth the investment. I’d be lost without Techium company.
+                    <p>I love your system. Definitely worth the investment. Iï¿½d be lost without Techium company.
                       <cite>Sven H.</cite>
                     </p>
                   </blockquote>
@@ -268,12 +268,12 @@
           </div>
         </div>
       </section>
-      <!– Contact section –>
+      <!ï¿½ Contact section ï¿½>
       <section id="contact" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
-            <p class="section-tagline">We’d love to hear from you!</p>
+            <p class="section-tagline">Weï¿½d love to hear from you!</p>
           </header>
           <div class="section-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
@@ -284,7 +284,7 @@
         </div>
       </section>
             </main>
-    <!– Footer –>
+    <!ï¿½ Footer ï¿½>
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
         <div class="row">
@@ -334,7 +334,7 @@
         <hr>
         <div class="row">
           <div class="col-1-2">
-            <p class="footer-copyright">© 2020 Techium, made with ? by students at Holberton School.</p>
+            <p class="footer-copyright">ï¿½ 2020 Techium, made with ? by students at Holberton School.</p>
           </div>
           <div class="col-1-2">
             <ul class="footer-nav nav">
